<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff">

    <com.pasc.lib.widget.toolbar.PascToolbar
        android:id="@+id/ctv_topbar"
        style="@style/WhiteFontToolbar"
        android:background="@color/white"
        app:enable_under_divider="true"
        app:support_translucent_status_bar="false"
        app:title="@string/business_mine_feedback"
        app:title_text_color="@color/black_333333"
        app:back_icon="@drawable/mine_temp_ic_back"
        app:under_divider_color="@color/gray_d5d5d5" />


    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ctv_topbar"
        android:paddingTop="@dimen/dp_35.0"
        android:src="@drawable/feedback_ic_feedback_success" />

    <TextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/black_333333"
        android:layout_below="@+id/iv_icon"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/business_mine_submit_success"/>


    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/gray_999999"
        android:layout_below="@+id/tv_success"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/dp_5.0"
        android:text="@string/business_mine_feedback_tips"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_30.0"
        android:background="@color/default_bg"
        android:layout_below="@+id/tv_tips">

        <TextView
            android:id="@+id/rtv_done"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50.0"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white_ffffff"
            android:background="@drawable/feedback_commit_btn_bg"
            android:layout_marginRight="@dimen/dp_15.0"
            android:layout_marginLeft="@dimen/dp_15.0"
            android:layout_marginTop="30dp"
            android:textSize="@dimen/text_size_17"
            android:gravity="center"
            android:text="@string/business_mine_done"/>
    </FrameLayout>






</RelativeLayout>
